# Release 0.5.0

 * Implement Trezor Hardware wallet 
   - trezor wallets are supported on all chains
   - custom firmware is required to access chains not supported in official firmware form Trezor
 * Implement Multisignature wallets
   - Primary multisig wallet type in Encompass is based on an as-yet draft BIP
     - Encompass-multisig supports a single root key to derive addresses on all chains
 * Chain-specific WIF version bytes now used
 * Installation & Build Enhancements
   - build system is updated to include building OSX and Ubuntu binary release packages
   - setup.py and setup-release.py modified to support user installation, sandbox building/installs
 * Bug-Fixes
   - o not include next_account address in wallet.addresses()
   - via - disable diff calc (use not implemented) 
 * Update icons 

# Release 0.4.4
 
 * Fixes issues with password encryption of seed & master privkeys
   - previous versions would only correctly update the encryption of the active chain
   - this could result in seed and/or master privkeys being unencrypted
   - this version will correct old wallets, however users are advised to move funds if leaking deleted data is a concern
   - more details available on https://maza.club/encompass

 * Implements updated Change Currency dialog, now shows status of PoW checks being done in ChainKey module, and
   number of servers listed in the module. 

 * Makes Windows releases more deterministic - specifies all dependencies in make_packages, resolves issues with requests module

# Release 0.4.0

 * Implement Darkcoin Chainkey module

 * Add chain-specfic uri handling, dust, fees, coinbase maturity constants

 * add additional default servers

 * Update Encompass logo icons

 * correct setup.py to correctly compile & include ltc_scrypt 

# Release 0.3.0

 * Implement VIAcoin ChainKey module

 * MZC reorg handler improved

 * URI support added 
