@@ -1,5 +1,5 @@
 #!/bin/bash
 DIR=INSTALL_DIR
-cd DIR/encompass
+cd $DIR/encompass
 ./encompass-x86_64.bin
 
