@@ -1,4 +1,12 @@
 #!/bin/bash
+error() {
+  printf '\E[31m'; echo "$@"; printf '\E[0m'
+}
+  
+if [[ $EUID -eq 0 ]]; then
+   error "This script should not be run using sudo or as the root user"
+   exit 1
+fi
 PREFIX="/"
 
 echo ""
@@ -20,8 +28,8 @@ tail -n +$SKIP $THIS | tar -C /tmp -xpvz
 # Any script here will happen after the tar file extract.
 success (){
  cat /tmp/Encompass-ELECTRUM_VERSION/README-Linux-x86_64.md
- echo "Encompass-ELECTRUM_VERSION is installed to ${DIR} - start script in ${BINDIR}"
- echo "Remember to save your seeds in a safe place!!" 
+ error "Encompass-ELECTRUM_VERSION is installed to ${DIR} - start script in ${BINDIR}"
+ error "Remember to save your seeds in a safe place!!" 
  echo "Finished"
  exit 0
 }
@@ -29,22 +37,22 @@ success (){
 check_arch (){
 if [ "$(uname -p)" != "x86_64" ]
 then
-   echo "Encompass for Linux supports x86_64 machines only"
-   echo "You're recommended to use a source installation:"
-   echo "git clone https://github.com/mazaclub/encompass"
-   echo "cd encompass"
-   echo "git checkout ELECTRUM_VERSION"
-   echo "pyrcc4 icons.prc -o gui/qt/icons_qrc.py"
-   echo "sudo apt-get install python-qt4 pip"
-   echo "sudo pip install --upgrade -r requirements.txt"
-   echo "sudo python setup.py install"
+   error "Encompass for Linux supports x86_64 machines only"
+   error "You're recommended to use a source installation:"
+   error "git clone https://github.com/mazaclub/encompass"
+   error "cd encompass"
+   error "git checkout ELECTRUM_VERSION"
+   error "pyrcc4 icons.prc -o gui/qt/icons_qrc.py"
+   error "sudo apt-get install python-qt4 pip"
+   error "sudo pip install --upgrade -r requirements.txt"
+   error "sudo python setup.py install"
    exit 2
 fi
 }
 
 install_encompass() {
      cat /tmp/Encompass-ELECTRUM_VERSION/LICENSE
-     echo "Installing to ${DIR}/encompass" \
+     error "Installing to ${DIR}/encompass" \
       && test -d ${DIR} || ${SUDO} mkdir -p ${DIR} \
       && test -d ${BINDIR} || ${SUDO}  mkdir -p ${BINDIR} \
       && ${SUDO} mkdir -p ${SHAREDIR}/app-install/icons \
@@ -54,9 +62,9 @@ install_encompass() {
       && ${SUDO} sed -e 's/INSTALL_DIR/'${DIR}'/g' /tmp/Encompass-ELECTRUM_VERSION/encompass.sh > ${BINDIR}/encompass \
       && ${SUDO} chmod 555 ${BINDIR}/encompass  \
       && ${SUDO} cp /tmp/Encompass-ELECTRUM_VERSION/encompass.desktop ${SHAREDIR}/applications/ \
-      && echo "Encompass-ELECTRUM_VERSION installation successful" \
-      && echo "To start encompass run ${DIR}/encompass/encompass " \
-      && echo "Your wallets will be in ${HOME}/.encompass/wallets" \
+      && error "Encompass-ELECTRUM_VERSION installation successful" \
+      && error "To start encompass run ${DIR}/encompass/encompass " \
+      && error "Your wallets will be in ${HOME}/.encompass/wallets" \
       && if [ "${SUDO}X" = "X" ] ; then
             echo "You might wish to add ${HOME}/encompass to your PATH"
 	    echo "and copy ${HOME}/encompass/90-trezor.rules to /etc/udev/rules.d"
@@ -68,7 +76,7 @@ install_encompass() {
 
 get_config () {
   cd /tmp/Encompass-ELECTRUM_VERSION
-  echo "Encompass has been extracted to /tmp/Encompass-ELECTRUM_VERSION"
+  error "Encompass has been extracted to /tmp/Encompass-ELECTRUM_VERSION"
   echo "This install script will be available at /tmp/Encompass/ELECTRUM_VERSION/linux_installer.sh"
   echo " "
   echo "Would you like to install Encompass to:"
@@ -89,22 +97,22 @@ get_config () {
        SHAREDIR="${HOME}/.local/share"
        install_encompass 
        ;;
-     3) echo "Not installing encompass" 
-        echo "You can view encompass in /tmp/Encompass-ELECTRUM_VERSION"
-        echo "Along with the full contents of this installer."
+     3) error "Not installing encompass" 
+        error "You can view encompass in /tmp/Encompass-ELECTRUM_VERSION"
+        error "Along with the full contents of this installer."
         exit 0
 	;;
-     *) echo "Please choose 1, 2, or 3"
+     *) error "Please choose 1, 2, or 3"
         get_config 
         ;;
   esac 
 }  
-echo "Installing Encompass-ELECTRUM_VERSION"
+error "Installing Encompass-ELECTRUM_VERSION"
 echo ""
 check_arch
 get_config
 
-echo "Install appears to have failed - please ensure you have root permissions and try again"
+error "Install appears to have failed - please ensure you have root permissions and try again"
 exit 1
 
 # NOTE: Don't place any newline characters after the last line below.
