@@ -99,8 +99,10 @@ cp -av /root/packages ./
 cp -av /root/trezorctl.py ./packages/
 ./make_windows
 test -d /root/release-packages/Windows || mkdir -pv /root/release-packages/Windows
-cp -av dist/* /root/release-packages/Windows
+mv dist/* /root/release-packages/Windows
+mv /opt/wine-electrum/drive_c/encompass/Encompass-${VERSION}/dist/encompass-setup.exe /root/release-packages/Windows/Encompass-${VERSION}-Windows-setup.exe
 
+mv /opt/wine-electrum/drive_c/encompass/Encompass-${VERSION}/dist/encompass.exe /root/release-packages/Windows/Encompass-${VERSION}-Windows.exe
 ## rm just isn't that expensive to run without fancy bash expansions
 
 rm -rf /opt/wine-electrum/drive_c/encompass/Encompass-"$VERSION".*
